parser/tests/bad/arr05.st
% upper bound of a 'static array' cannot be negative

var arr: array 1..-1 of int
